--- a/incubator/simu_cov.Rmd
+++ b/incubator/simu_cov.Rmd
@@ -597,7 +597,7 @@ sim.out.list <- foreach(s = 1:nrow(sim.pars), .packages = c("COMPASS", "dplyr", 
   ## Make metadata for COMPASS
   metadat <- 
     covar %>%
-    select(-int) %>%
+    dplyr::select(-int) %>%
     mutate(sample.id = rownames(.))
   
   #Create a version of X without an intercept column
@@ -705,6 +705,27 @@ lapply(sim.out.list, FUN = function(fit) {
 
 #### Proportion Stim - Unstim vs Chemokine X
 
+```{r}
+sim.out.list[[1]]$beta.true.final
+```
+
+```{r}
+sim.out.list[[1]]$omega[1:5,]
+```
+
+```{r}
+sim.out.list[[1]]$gamma.m[1:5,]
+```
+
+```{r}
+sim.out.list[[1]]$sim.fit$data$n_u[1:5,]
+```
+
+```{r}
+sim.out.list[[1]]$sim.fit$data$n_s[1:5,]
+```
+
+
 ```{r fig.width = 4, fig.height = 3}
 lapply(sim.out.list, FUN = function(sim) {
   #Find the differences in proportions between stim and unstim
@@ -755,6 +776,198 @@ lapply(sim.out.list, FUN = function(sim) {
 })
 ```
 
+##### Examine Outlier Values
+
+Set up diff dataframe
+```{r}
+#Find the differences in proportions between stim and unstim
+diff <- (sim.out.list[[1]]$sim.fit$data$n_s / rowSums(sim.out.list[[1]]$sim.fit$data$n_s)) - (sim.out.list[[1]]$sim.fit$data$n_u / rowSums(sim.out.list[[1]]$sim.fit$data$n_u))
+
+#Make a dataframe
+diff.df <- data.frame(hiv = as.factor(sim.out.list[[1]]$sim.fit$data$meta$hiv),
+                      diff
+)
+
+#Rename columns
+colnames(diff.df) <- gsub("^X", "cluster", colnames(diff.df))
+```
+
+###### Cytokine Absent
+
+Isolate samples
+```{r}
+diff.df %>%
+    filter(cluster8 >= 0.07) %>%
+    select(hiv, cluster8, cluster16)
+
+cluster8.0.outliers <- 
+  diff.df %>%
+    filter(cluster8 >= 0.07) %>%
+    select(hiv, cluster8, cluster16) %>%
+    rownames()
+
+data.frame(sim.out.list[[1]]$omega[as.integer(cluster8.0.outliers), ])
+data.frame(sim.out.list[[1]]$gamma.m[as.integer(cluster8.0.outliers), ])
+```
+
+**Notes:**
+
+- All samples either have only subset 8 stimulated or subset 8 + one other subset stimulated
+- The omega values suggest that these subsets were stimulated by chance (all only about 5%)
+
+Examine an outlier sample
+```{r}
+i = 65
+
+#True stimulated subsets
+sim.out.list[[1]]$gamma.m[i,]
+
+# Draw prob vector from Dirichlet for unstim
+p_u.test <- rdirichlet(n = 1, alpha = alpha_u[i,])
+
+# Copy prob vector for unstim and assign to stim
+p_s.test <- p_u.test
+
+#Concentration for stimulated subsets
+alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+#Old stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+# For subsets where gamma == 1, draw new probabilities from Dirichlet using stim concentrations, and normalize (see note above)
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)] <- rdirichlet(n = 1, alpha = alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]) * sum(p_u.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)])
+
+#New stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+(p_s.test / sum(p_s.test)) - (p_u.test / sum(p_u.test))
+```
+
+Examine a non-outlier sample (subset 8 not truly responding)
+```{r}
+i = 72
+
+#True stimulated subsets
+sim.out.list[[1]]$gamma.m[i,]
+
+# Draw prob vector from Dirichlet for unstim
+p_u.test <- rdirichlet(n = 1, alpha = alpha_u[i,])
+
+# Copy prob vector for unstim and assign to stim
+p_s.test <- p_u.test
+
+# Concentration for stimulated subsets
+alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+# For subsets where gamma == 1, draw new probabilities from Dirichlet using stim concentrations, and normalize (see note above)
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)] <- rdirichlet(n = 1, alpha = alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]) * sum(p_u.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)])
+
+#New stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+(p_s.test / sum(p_s.test)) - (p_u.test / sum(p_u.test))
+```
+
+Probs from concentration parameters mimicking an outlier vs not
+```{r}
+p_u <- rdirichlet(n = 1, alpha = c(50, 50, 50, 50, 50, 50, 50, 500))
+
+
+rdirichlet(n = 1, alpha = c(200, 500))
+
+rdirichlet(n = 1, alpha = c(2000, 2000, 2000, 2000, 2000, 2000, 500))
+```
+
+**Explanation:** The outliers when cytokine is absent have higher difference in prop stim - prop unstim because there is only a single cell subset that responds by chance. This results in a higher proportion for that single subset compared to when multiple subsets are responding because they all must sum to 1. See example above.
+
+
+
+###### Cytokine Present
+
+Isolate samples
+```{r}
+diff.df %>%
+    filter(cluster8 >= 0.01 & cluster8 <= 0.05) %>%
+    select(hiv, cluster8, cluster16)
+
+cluster8.1.outliers <- 
+  diff.df %>%
+    filter(cluster8 >= 0.01 & cluster8 <= 0.05) %>%
+    select(hiv, cluster8, cluster16) %>%
+    rownames()
+
+data.frame(sim.out.list[[1]]$omega[as.integer(cluster8.1.outliers), ])
+data.frame(sim.out.list[[1]]$gamma.m[as.integer(cluster8.1.outliers), ])
+```
+
+
+**Notes:**
+
+- All samples have multiple subsets stimulated apart from subset 8
+- The omega values for subset 8 for these samples suggest that they were stimulated by chance (only ~ 5% prob)
+
+
+Examine an outlier sample
+```{r}
+i = 148
+
+#True stimulated subsets
+sim.out.list[[1]]$gamma.m[i,]
+
+# Draw prob vector from Dirichlet for unstim
+p_u.test <- rdirichlet(n = 1, alpha = alpha_u[i,])
+
+# Copy prob vector for unstim and assign to stim
+p_s.test <- p_u.test
+
+#Concentration for stimulated subsets
+alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+#Old stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+# For subsets where gamma == 1, draw new probabilities from Dirichlet using stim concentrations, and normalize (see note above)
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)] <- rdirichlet(n = 1, alpha = alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]) * sum(p_u.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)])
+
+#New stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+(p_s.test / sum(p_s.test)) - (p_u.test / sum(p_u.test))
+```
+
+Examine a non-outlier sample (subset 8 not truly responding)
+```{r}
+i = 152
+
+#True stimulated subsets
+sim.out.list[[1]]$gamma.m[i,]
+
+# Draw prob vector from Dirichlet for unstim
+p_u.test <- rdirichlet(n = 1, alpha = alpha_u[i,])
+
+# Copy prob vector for unstim and assign to stim
+p_s.test <- p_u.test
+
+# Concentration for stimulated subsets
+alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+# For subsets where gamma == 1, draw new probabilities from Dirichlet using stim concentrations, and normalize (see note above)
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)] <- rdirichlet(n = 1, alpha = alpha_s[i, c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]) * sum(p_u.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)])
+
+#New stimulated probs
+p_s.test[c(which(sim.out.list[[1]]$gamma.m[i,] == 1), K)]
+
+(p_s.test / sum(p_s.test)) - (p_u.test / sum(p_u.test))
+```
+
+**Explanation:** The outliers when cytokine is present but the subset is not stimulated have been stimulated by chance. Because this occurs in the cytokine present sample, there are many other subsets that are also stimulated, so the proportion for these stimulated by chance samples is relatively low for this subset. In contrast, the subsets that are stimulated by chance in the cytokine absent samples have higher proportions because few other (if any) subsets are stimulated.
+
+
+
 #### True PFS vs True Protection
 
 ```{r}
@@ -801,19 +1014,7 @@ lapply(sim.out.list, FUN = function(sim) {
 
 ```
 
-Logistic regression of true protection against true PFS
-```{r}
-lapply(sim.out.list, FUN = function(sim) {
-  (
-    coef(
-      glm(protect.true ~ pfs.true.pfs,
-          family = "binomial",
-          data = sim$sim.fit$data$meta
-        )
-    )
-  )
-})
-```
+
 
 
 ### Estimated Values
@@ -885,16 +1086,178 @@ lapply(sim.out.list, FUN = function(sim) {
 })
 ```
 
+Look at COMPASScovariate Omega - mean.gamma
+```{r}
+lapply(sim.out.list, FUN = function(sim) {
+
+  #Omega - mean_gamma
+  omega.gamma.diff.covar <- sim$omega - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
+  omega.gamma.diff.compass <- sim$omega - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
+  colnames(omega.gamma.diff.compass) <- NULL
+  
+  #Create datasets
+  omega.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                          omega.gamma.diff.covar
+  )
+  omega.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                            omega.gamma.diff.compass
+  )
+  
+  omega.gamma.diff.covar.df
+  
+})
+```
+
+Look at COMPASS omega - mean.gamma
+```{r}
+lapply(sim.out.list, FUN = function(sim) {
+
+  #Omega - mean_gamma
+  omega.gamma.diff.covar <- sim$omega - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
+  omega.gamma.diff.compass <- sim$omega - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
+  colnames(omega.gamma.diff.compass) <- NULL
+  
+  #Create datasets
+  omega.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                          omega.gamma.diff.covar
+  )
+  omega.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                            omega.gamma.diff.compass
+  )
+  
+  omega.gamma.diff.compass.df
+  # sim$sim.fit$fit$mean_gamma[,1:sim$K1]
+  
+})
+```
+
+#### Mean Gamma vs True Gamma
+
+```{r}
+lapply(sim.out.list, FUN = function(sim) {
+
+  #Omega - mean_gamma
+  true.gamma.diff.covar <- sim$gamma.m - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
+  true.gamma.diff.compass <- sim$gamma.m - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
+  colnames(true.gamma.diff.compass) <- NULL
+  
+  #Create datasets
+  true.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                          true.gamma.diff.covar
+  )
+  true.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                            true.gamma.diff.compass
+  )
+  
+  #Combine datasets in long format
+  true.gamma.diff.df <-
+    bind_rows(
+      true.gamma.diff.covar.df %>%
+        mutate(model = "COMPASScovariate"),
+      true.gamma.diff.compass.df %>%
+        mutate(model = "COMPASS")
+    )
+  
+  #Rename columns
+  colnames(true.gamma.diff.df) <- gsub("^X", "cluster", colnames(true.gamma.diff.df))
+  
+  #Histograms
+  hist.plot.list <-
+    lapply(grep('cluster', colnames(true.gamma.diff.df), value = T), FUN = function(cluster) {
+      
+      #Make the histogram for the current cluster
+      hist.plot <-
+        ggplot(data = true.gamma.diff.df %>%
+                      select(c(hiv,
+                               model,
+                               {{cluster}}
+                      )
+               ),
+               aes_string(x = cluster,
+                          fill = "hiv"
+               )
+        )+
+        geom_histogram(bins = 80)+
+        facet_grid(hiv ~ model)+
+        theme_bw()+
+        # scale_x_continuous(breaks = seq.default(from = -1,
+        #                                         to = 1,
+        #                                         by = 0.25
+        #                   )
+        # )+
+        scale_fill_discrete(name = "Cytokine X\npresence")+
+        ylab("Frequency")+
+        xlab("True Gamma - Mean Gamma")+
+        labs(title = stringr::str_to_title({{cluster}}))
+      
+      return(hist.plot)
+    })
+  
+  return(hist.plot.list)
+  
+})
+```
+
+
+```{r}
+lapply(sim.out.list, FUN = function(sim) {
+
+  #Omega - mean_gamma
+  true.gamma.diff.covar <- sim$gamma.m - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
+  true.gamma.diff.compass <- sim$gamma.m - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
+  colnames(true.gamma.diff.compass) <- NULL
+  
+  #Create datasets
+  true.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                          true.gamma.diff.covar
+  )
+  true.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
+                                            true.gamma.diff.compass
+  )
+
+  bind_rows(
+    true.gamma.diff.covar.df %>%
+      select(-hiv) %>%
+      summarize(Under.est = sum(rowSums(.) > 0),
+                Over.est = sum(rowSums(.) < 0)
+      ) %>%
+      mutate(Model = "COMPASScov"),
+    true.gamma.diff.compass.df %>%
+      select(-hiv) %>%
+      summarize(Under.est = sum(rowSums(.) > 0),
+                Over.est = sum(rowSums(.) < 0)
+      ) %>%
+      mutate(Model = "COMPASS")
+  )
+  
+
+  
+})
+```
+
+```{r}
+round(
+      sum(sim$gamma.m == sim$sim.fit$fit$mean_gamma[,-ncol(sim$sim.fit$fit$mean_gamma)]) /
+        (dim(sim$gamma.m)[1] * dim(sim$gamma.m)[2]) * 100,
+      digits = 2
+  )
+
+  round(
+      sum(sim$gamma.m == sim$compass.fit$fit$fit$mean_gamma[,-ncol(sim$compass.fit$fit$fit$mean_gamma)]) /
+        (dim(sim$gamma.m)[1] * dim(sim$gamma.m)[2]) * 100,
+      digits = 2
+  )
+```
+
 
 #### Gammma from COMPASScovariate vs COMPASS
+
+Add: Color by true gamma value
 
 ```{r}
 lapply(sim.out.list, FUN = function(sim) {
   #Find the differences in mean gamma matrices between COMPASS and COMPASScovariate
   mean.gamma.diff <- sim$sim.fit$fit$mean_gamma - sim$compass.fit$fit$fit$mean_gamma
-  
-  #Subset columns where there are any differences
-  mean.gamma.diff <- mean.gamma.diff[, abs(colSums(mean.gamma.diff)) > 0]
   
   #Remove colnames
   colnames(mean.gamma.diff) <- NULL
@@ -903,6 +1266,9 @@ lapply(sim.out.list, FUN = function(sim) {
   mean.gamma.diff.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
                                    mean.gamma.diff
   )
+  
+  #Subset columns where there are any differences
+  mean.gamma.diff <- mean.gamma.diff[, abs(colSums(mean.gamma.diff)) > 0]
   
   #Rename columns
   colnames(mean.gamma.diff.df) <- gsub("^X", "cluster", colnames(mean.gamma.diff.df))
